Another run at style. The feature here is clearing out some ugliness in use of reflection and newInstance(). Fixed up some copyright headers.
git-svn-id: https://svn.apache.org/repos/asf/mahout/trunk@1196818 13f79535-47bb-0310-9956-ffa450edef68